lib/aten/atg_shim.h

/* Hand-written C ABI shim over the ATen "core" C++ subset: the *Tensor API*
 * (handle lifecycle + introspection + the C++ conversion helpers). The ATen
 * *operations* (at::add, at::reshape, ...) live in atg_ops.h / atg_ops.cpp,
 * which is the half intended to eventually be autogenerated from the schema.
 *
 * ctypes binds C, but ATen/c10 are C++ (mangled symbols, non-POD by-value
 * types). Every function here is `extern "C"` and trades only in C scalars /
 * opaque pointers so it is callable from OCaml ctypes. Kept deliberately small
 * and grown one operation at a time. */
#ifndef ATG_SHIM_H_
#define ATG_SHIM_H_

#include <stddef.h>
#include <stdint.h>

/* Opaque owning handle to a heap-allocated at::Tensor.  Caller must atc_free
   it.  The underlying type is never exposed to C callers. */
struct atc_tensor_opaque;
typedef struct atc_tensor_opaque* atc_tensor;

/* Data type: integer codes matching c10::ScalarType. */
typedef int8_t atc_scalar_type;
#define ATC_DTYPE_BYTE   ((atc_scalar_type)0)
#define ATC_DTYPE_CHAR   ((atc_scalar_type)1)
#define ATC_DTYPE_SHORT  ((atc_scalar_type)2)
#define ATC_DTYPE_INT    ((atc_scalar_type)3)
#define ATC_DTYPE_LONG   ((atc_scalar_type)4)
#define ATC_DTYPE_HALF   ((atc_scalar_type)5)
#define ATC_DTYPE_FLOAT  ((atc_scalar_type)6)
#define ATC_DTYPE_DOUBLE ((atc_scalar_type)7)
#define ATC_DTYPE_BOOL   ((atc_scalar_type)11)

#ifdef __cplusplus
extern "C" {
#endif

/* The process-wide default dtype, as a c10::ScalarType enum value. */
int8_t atc_default_dtype(void);

/* Size in bytes of one element of the given c10::ScalarType. */
size_t atc_dtype_elem_size(int8_t scalar_type);

/* New uninitialized contiguous CPU tensor of the given shape and dtype. */
atc_tensor atc_new(const int64_t* sizes, size_t ndim, atc_scalar_type dtype);

/* Release a handle returned by atc_new / atc_add / atc_mul. */
void atc_free(atc_tensor t);

/* Number of elements. */
int64_t atc_numel(atc_tensor t);

/* Number of dimensions (rank). */
size_t atc_dim(atc_tensor t);

/* Write the tensor's shape (its [atc_dim] sizes) into [out]; the caller sizes
   the buffer using [atc_dim]. */
void atc_sizes(atc_tensor t, int64_t* out);

/* Write the tensor's strides (in elements) into [out], sized via [atc_dim]. */
void atc_strides(atc_tensor t, int64_t* out);

/* The tensor's dtype as a c10::ScalarType code. */
atc_scalar_type atc_dtype(atc_tensor t);

/* Size in bytes of one element of the tensor's dtype. */
int64_t atc_element_size(atc_tensor t);

/* 1 if the tensor is contiguous / defined / on CPU, else 0. */
int atc_is_contiguous(atc_tensor t);
int atc_defined(atc_tensor t);
int atc_is_cpu(atc_tensor t);

/* Raw data pointer, checking that the tensor's dtype matches.
   Returns NULL on mismatch; the caller casts to the appropriate element type. */
void* atc_data_ptr(atc_tensor t, atc_scalar_type dtype);

/* Extract the single element of a one-element tensor, converting to the target
   type. Writes *out and returns 1; on failure (e.g. numel != 1) returns 0 and
   sets atc_last_error. */
int atc_item_double(atc_tensor t, double* out);
int atc_item_int64(atc_tensor t, int64_t* out);

/* Message of the last shim error on this thread, or NULL if none. ATen throws
   c10::Error, which cannot cross extern "C"; throwing entry points (e.g.
   atc_new) catch it, stash the message here, and return a sentinel. Valid only
   until the next shim call on the same thread. */
const char* atc_last_error(void);

/* Human-readable rendering via ATen's tensor printer. Valid until the next shim
   call on this thread; NULL (with atc_last_error set) on error. */
const char* atc_to_string(atc_tensor t);

/* Elementwise closeness / exact equality (ATen at::allclose / at::equal).
   Return 1 (true) or 0 (false), or -1 with atc_last_error set on error. */
int atc_allclose(atc_tensor a, atc_tensor b, double rtol, double atol,
                 int equal_nan);
int atc_equal(atc_tensor a, atc_tensor b);

/* Number of live tensor handles: atc_wrap allocations not yet atc_free'd.
   atc_wrap is the single allocation point (atc_new and every op wrapper go
   through it), so this is an exact live count — used by the OCaml RAII layer's
   leak / GC round-trip tests. */
int64_t atc_live_count(void);

/* Tuple-returning ops: we expose only the primary output tensor (element 0).
   The secondary outputs (mean/rstd for batch norm, indices for max pool) are
   discarded; the updated models never use them in the forward pass. */

/* _native_batch_norm_legit_no_training: inference-only batch norm (no running
   stat update). Returns the normalised output; discards the saved mean/rstd. */
atc_tensor atg__native_batch_norm_legit_no_training(
    atc_tensor input, atc_tensor weight, atc_tensor bias,
    atc_tensor running_mean, atc_tensor running_var,
    double momentum, double eps);

/* max_pool2d_with_indices: returns the pooled output; discards the index map. */
atc_tensor atg_max_pool2d_with_indices(
    atc_tensor self,
    int64_t* kernel_size_data, int kernel_size_len,
    int64_t* stride_data,      int stride_len,
    int64_t* padding_data,     int padding_len,
    int64_t* dilation_data,    int dilation_len,
    int ceil_mode);

#ifdef __cplusplus
}

/* C++ conversion helpers for use inside atg_shim.cpp and generated wrappers. */
#include <atomic>

#include <ATen/core/Tensor.h>

namespace atc_detail {
/* Live atc_tensor handles; bumped in atc_wrap, dropped in atc_free. Defined in
   atg_shim.cpp. Atomic so the count stays correct no matter which thread a
   handle is freed on (e.g. a GC finaliser). */
extern std::atomic<long> live;

/* Stash a message for atc_last_error (thread-local; see atg_shim.cpp). */
void set_error(const char* msg);
}  // namespace atc_detail

/* Run a shim body, converting any C++ exception into an atc_last_error message
   and returning [sentinel] (c10::Error cannot cross extern "C"). */
#define ATC_TRY(sentinel, ...)                 \
  try {                                        \
    __VA_ARGS__                                \
  } catch (const std::exception& e) {          \
    ::atc_detail::set_error(e.what());         \
    return sentinel;                           \
  }

inline at::Tensor* atc_to_ptr(atc_tensor t) {
  return reinterpret_cast<at::Tensor*>(t);
}
inline atc_tensor atc_from_ptr(at::Tensor* t) {
  return reinterpret_cast<atc_tensor>(t);
}
inline atc_tensor atc_wrap(at::Tensor t) {
  ++atc_detail::live;
  return atc_from_ptr(new at::Tensor(std::move(t)));
}
#endif

#endif /* ATG_SHIM_H_ */