lib/aten/function_description.ml

open Ctypes

(* The Tensor API: the stable, hand-written half of the binding (handle
   lifecycle + introspection). The ATen *operations* live in
   operation_description.ml — the half meant to be autogenerated. The shared
   handle type [atc_tensor] is defined here and reused there.

   atc_tensor is `struct atc_tensor_opaque*` in shim.h. We model it as a
   pointer to an unsealed OCaml structure (no sizeof needed — the struct is
   forward-declared in C and we only pass it by pointer). *)
type tensor_opaque

let tensor_opaque : tensor_opaque structure typ = structure "atc_tensor_opaque"
let atc_tensor = ptr tensor_opaque

(* c10::ScalarType crosses the boundary as its int8 code; [scalar_type] is a
   ctypes view giving the OCaml side the typed [Scalar_type.t] enum instead of a
   bare int (mirrors the enum views in operation_description.ml). *)
let scalar_type =
  view int8_t
    ~read:(fun c ->
      match Scalar_type.of_int c with
      | Some s -> s
      | None -> Printf.ksprintf failwith "unknown ScalarType code %d" c)
    ~write:Scalar_type.to_int

module Functions (F : Ctypes.FOREIGN) = struct
  open F

  let default_dtype =
    foreign "atc_default_dtype" (void @-> returning scalar_type)

  let dtype_elem_size =
    foreign "atc_dtype_elem_size" (scalar_type @-> returning size_t)

  let new_ =
    foreign "atc_new"
      (ptr int64_t @-> size_t @-> scalar_type @-> returning atc_tensor)

  let free = foreign "atc_free" (atc_tensor @-> returning void)
  let numel = foreign "atc_numel" (atc_tensor @-> returning int64_t)
  let dim = foreign "atc_dim" (atc_tensor @-> returning size_t)
  let sizes = foreign "atc_sizes" (atc_tensor @-> ptr int64_t @-> returning void)

  let strides =
    foreign "atc_strides" (atc_tensor @-> ptr int64_t @-> returning void)

  (* named [dtype] (not [scalar_type]) to avoid shadowing the view above. *)
  let dtype = foreign "atc_dtype" (atc_tensor @-> returning scalar_type)

  let element_size =
    foreign "atc_element_size" (atc_tensor @-> returning int64_t)

  let is_contiguous = foreign "atc_is_contiguous" (atc_tensor @-> returning int)
  let defined = foreign "atc_defined" (atc_tensor @-> returning int)
  let is_cpu = foreign "atc_is_cpu" (atc_tensor @-> returning int)

  let data_ptr =
    foreign "atc_data_ptr" (atc_tensor @-> scalar_type @-> returning (ptr void))

  let item_double =
    foreign "atc_item_double" (atc_tensor @-> ptr double @-> returning int)

  let item_int64 =
    foreign "atc_item_int64" (atc_tensor @-> ptr int64_t @-> returning int)

  let live_count = foreign "atc_live_count" (void @-> returning int64_t)
  let last_error = foreign "atc_last_error" (void @-> returning string_opt)

  (* Tuple-returning ops: hand-written shims that expose only the primary output
     tensor.  Named to match the ATen overload key so C.Operations and C.Functions
     share the same naming convention. *)
  let _native_batch_norm_legit_no_training_default =
    foreign "atg__native_batch_norm_legit_no_training"
      (atc_tensor @-> atc_tensor @-> atc_tensor @-> atc_tensor @-> atc_tensor
     @-> double @-> double @-> returning atc_tensor)

  let max_pool2d_with_indices_default =
    foreign "atg_max_pool2d_with_indices"
      (atc_tensor @-> ptr int64_t @-> int @-> ptr int64_t @-> int
     @-> ptr int64_t @-> int @-> ptr int64_t @-> int @-> int
     @-> returning atc_tensor)

  let to_string = foreign "atc_to_string" (atc_tensor @-> returning string_opt)

  let allclose =
    foreign "atc_allclose"
      (atc_tensor @-> atc_tensor @-> double @-> double @-> int @-> returning int)

  let equal = foreign "atc_equal" (atc_tensor @-> atc_tensor @-> returning int)
end
